[gd_scene load_steps=4 format=3 uid="uid://cs8lnupepor0n"]

[ext_resource type="Script" path="res://src/bullet/Bullet.gd" id="1_lnk00"]
[ext_resource type="Texture2D" uid="uid://deve7snoj5rrt" path="res://src/bullet/WhiteCirclex256.png" id="2_0p07e"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qvb2s"]
radius = 8.15

[node name="Bullet" type="Area2D"]
script = ExtResource("1_lnk00")

[node name="Circle" type="Sprite2D" parent="."]
scale = Vector2(0.156617, 0.157)
texture = ExtResource("2_0p07e")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qvb2s")

[node name="ExpireTimer" type="Timer" parent="."]

[node name="OnScreenNotifier" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-15, -15, 30, 30)

[connection signal="timeout" from="ExpireTimer" to="." method="_on_expire_timer_timeout"]
[connection signal="screen_exited" from="OnScreenNotifier" to="." method="_on_on_screen_notifier_screen_exited"]
